No longer passing react-lazy or Suspense through prop-drilling, instead just use the imports on corresponding files. Rewrote the Suspence to be divided into two parts inside of MoreInfo, the page is now suspended in two halves so the top portion takes 100vh while the bottom portion where a lot of images are loaded is also a seperate Suspense of 100vh. Anime AnimeDescription got rewritten to be more readable, the query selector has been added into the useeffect for eventual SSR reasons. All other files effected are import statement updates and removal of unnecessary props.

--- a/src/components/shared/Spinner/spinner.css
+++ b/src/components/shared/Spinner/spinner.css
@@ -1,18 +1,27 @@
 .loading-area {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
   position: fixed;
   top: 50%;
-  left: 50%;
+  z-index: 100;
+  justify-content: center;
 }
 
 .spinner {
-  width: fit-content;
   animation: spinner 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite;
   position: absolute;
   z-index: 100;
+  width: 100%;
+  max-width: 175px;
+  display: -webkit-box;
 }
+
+@media (max-width: 498px) {
+  .spinner {
+    max-width: 100px;
+  }
+}
+
 @keyframes spinner {
   to {
     transform: rotateZ(360deg);
